# OC_P11_Lunar_Lander_RL

./: .gitignore  Makefile  README.md  main.py  pyproject.toml
api/: agent_service.py  config.py  logger_service.py  main.py  routes.py  schemas.py
frontend/: app.py
frontend/pages/: 01_play.py  02_analytics.py
notebooks/: 01_baseline.ipynb  02_optimization.ipynb
notebooks/data/logs/PPO_1/: events.out.tfevents.1772032081.Xaviers-MacBook-Pro.local.487.2
notebooks/logs/DQN_1/: events.out.tfevents.1772029771.Xaviers-MacBook-Pro.local.487.0
